fix intents in css and html files, move background color setting to css file, fix wrapping in atom so source wraps at 100

--- a/screen.css
+++ b/screen.css
@@ -6,35 +6,34 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /* Begin site styles... */
 html {
-	font-family: 'Sansita', sans-serif;
+	background-color: black;
+	font-family: "fahkwang", helvetica, arial, sans-serif;
 	margin-left: 4em;
 	margin-right: 4em;
 	padding: 0.5em;
 }
 h1 {
 	color: hotpink;
+	font-family: 'Sansita', sans-serif;
 	font-size: 4em;
 	font-weight: bolder;
 	padding-bottom: .25em;
-  text-align: center;
+	text-align: center;
 }
 h2 {
 	color: pink;
-	font-family: "fahkwang", helvetica, arial, sans-serif;
-  font-size: 2em;
+	font-size: 2em;
 	font-weight: bold;
-  padding-bottom: 1em;
-  padding-top: 1em;
+	padding-bottom: 1em;
+	padding-top: 1em;
 	text-align: center;
 }
 p {
-  color: gray;
-	font-family: "fahkwang", helvetica, arial, sans-serif;
-  font-size: 1em;
-  font-style: normal;
+	color: lightslategrey;
+	font-size: 1em;
+	font-style: normal;
 	font-weight: normal;
-	line-height: 1.5em;
+	line-height: 1.4em;
 	padding-bottom: .75em;
-	text-indent: 1.5em;
 	text-justify: inter-word;
 }
